Integrating ChatGPT API - Integrating chatgpt API - Fix "typing" indicator - Fix overflow css of chat - Add auto scrolldown to latest chat

--- a/src/Components/ChatBotApp.css
+++ b/src/Components/ChatBotApp.css
@@ -2,6 +2,7 @@
   width: 100%;
   height: 100%;
   display: flex;
+  overflow: hidden;
 }
 
 .chat-list {
@@ -105,6 +106,11 @@
   display: flex;
   flex-direction: column;
   row-gap: 4rem;
+  overflow-y: auto;
+}
+
+.chat::-webkit-scrollbar {
+  display: none;
 }
 
 .prompt,
@@ -143,11 +149,12 @@
   font-size: 1.6rem;
   color: #7b8ebc;
   margin-top: auto;
+  margin-bottom: -3rem;
 }
 
 .msg-form {
   width: 100%;
-  height: 10rem;
+  min-height: 10rem;
   background-color: #161c2c;
   display: flex;
   align-items: center;
